ingnore the temp directory for vscode remove duplicated line fix compilation warning sync options winconfig.h from config.h

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 .deps/
 
 # Visual Studio
+.vs/
 x64/
 Release/
 Debug/
@@ -19,6 +20,7 @@ Debug64/
 *.suo
 *.sdf
 *.opensdf
+.vscode/
 
 # Temporaries
 x86asmtemp.S
